CHANGELOG

2.0.34
UTILS:
* UTIL API - introduce postman_collection

BUGFIX:
* UTIL API - bugfix related to JSON output
* UTIL type=rule | bugfix 'filter=(rule is.unused.fast)' if searching via API mode on Panorama

GENERAL:


2.0.33 (20220404)
UTILS:
* UTIL type=address | introduce 'filter=(ip.count >,<,=! VALUE)' AND 'actions=move-range2network'
* UTIL bash-autocompletion | introduce argument "outputformatset="
* UTIL type=address | actions=exportToExcel:FILE.html - extend with ip.count value
* UTIL type=ALLMERGER | extend argument 'exportCSV' to 'exportCSV=FILE.html' which export the info into EXCEL / HTML format
* UTIL develop display-xpath-for-node-filter | add argument fullxpath - to display also for template info the full. output
* UTIL develop display-xpath-value | introduce argument displayattributename - to only display the attribute, not full content
* UTIL type=service | introduce actions=split-large-service-groups:MAXnumber
* UTIL type=[ALLMERGER] - duplicate code reduction - output improvements
* UTIL type=device | introduce new actions=DefaultSecurityRule-SecurityProfile-SetAlert/ DefaultSecurityRule-SecurityProfileGroup-Set:SECPROFGROUP
* UTIL API - move from develop into production

BUGFIX:
* class DeviceGroup / Template - remove $xmlroot as already defined in trait XmlConvertible
* UTIL ALLMERGER scripts | bugfix for argument exportCSV=FILE.html - to display all merged objects

GENERAL:


2.0.32 (20220318)
UTILS:
* UTIL type=rule | rework 'filter=(service port.counter)' is now 'filter=(service.port.count >,<,=,! COUNT)')
* UTIL type=rule | extend actions=exportToExcel with service Counter
* UTIL type=protocoll-number-download | introduction for future usage
* UTIL type=rule | actions=exportToExcel - introduce 'rulebase' column
* UTIL type=rule | 'filter=(schedule expire.in.days XYZ) renamed to 'filter=(schedule.expire.in.days >,<,=,! XYZ)'
* UTIL type=securityProfilegroup actions=exporttoexcel | introduce information about used location and counter